Fix spacing around "FREE"

--- a/src/index.css
+++ b/src/index.css
@@ -152,7 +152,7 @@ h1.ekit-fancy-text {
   position: relative;
   display: inline-block;
   vertical-align: top;
-  margin: 0 0 0 10px;
+  margin: 0 10px 0 10px;
   min-width: 85px;
 }
 
